samples/_failures_safe/1761162364_1bf6b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b156cd2.c: In function ‘main’:
./samples/SAFE/__tmp_2b156cd2.c:159:5: error: expected declaration or statement at end of input
  159 |     }
      |     ^
